# ExpanderCompilerCollection

./: .gitignore  .gitmodules  Cargo.toml  api.go  broadcast_info  build-rust-avx2.sh  build-rust-avx512.sh  build-rust.sh  check.sh  circuit  commitment  compile.go  extra_info  go.mod  go.sum  go.work  go.work.sum  input_partition  input_vals  main.go  pcs_setup  proof  readme.md  rust-toolchain.toml
.cargo/: config.toml
circom_preprocessor/: Cargo.toml  README.md
circom_preprocessor/src/: execution_user.rs  input_user.rs  main.rs
circom_preprocessor/src/constraint_generation/: compute_constants.rs  execute.rs  expression_trace.rs  go_export.rs  mod.rs
circom_preprocessor/src/constraint_generation/environment_utils/: component_representation.rs  environment.rs  mod.rs  slice_types.rs
circom_preprocessor/src/constraint_generation/execution_data/: executed_program.rs  executed_template.rs
circuit-std-rs/: Cargo.toml  broadcast_info  circuit  commitment  extra_info  input_partition  input_vals  pcs_setup  proof
circuit-std-rs/compiled/: sha256.circuit
circuit-std-rs/src/: big_int.rs  hashtable.rs  lib.rs  logup.rs  logup_rangeproof.rs  matmul.rs  non_native.rs  pairing.rs  poseidon.rs  poseidon_m31.rs  poseidon_m31_var.rs  range_proof.rs  sha2.rs  sha256.rs  sha2_m31.rs  tests.rs  traits.rs  utils.rs
circuit-std-rs/src/gnark/: element.rs  emparam.rs  field.rs  hints.rs  limbs.rs  mod.rs  utils.rs
circuit-std-rs/src/gnark/emulated/: mod.rs  point.rs
circuit-std-rs/src/non_native/: u120.rs  u2048.rs  util.rs
circuit-std-rs/src/poseidon/: poseidon.rs  poseidon_m31.rs  poseidon_u32.rs  utils.rs
circuit-std-rs/src/sha2/: util.rs
circuit-std-rs/src/sha256/: a.circuit  gf2.rs  gf2_utils.rs  m31.rs  m31_utils.rs  m31_utils_zkcuda.rs  m31_zkcuda.rs
circuit-std-rs/src/tests/: common.rs  logup.rs  sha2.rs  u120.rs  u2048.rs  util.rs
circuit-std-rs/src/tests/gnark/: mod.rs
circuit-std-rs/tests/: common.rs  comparison.rs  expander_circuit.rs  expander_circuit_rangeproof.rs  expander_circuit_test.rs  expander_prover  expander_prover.rs  expander_witness.rs  gnark.rs  logup.rs  matmul.rs  mod.rs  poseidon.rs  poseidon_m31.rs  poseidon_m31_var.rs  poseidon_u32.rs  sha256_debug_utils.rs  sha256_gf2.rs  sha256_m31.rs  sha256_m31_zkcuda.rs  sha2_m31.rs  util.rs  zkcuda_hint.rs
circuit-std-rs/tests/gnark/: element.rs  mod.rs
circuit-std-rs/tests/u2048/: u2048_add.rs  u2048_comp.rs  u2048_mul_mod.rs  u2048_mul_no_mod.rs
efc/: Cargo.toml  efc_end2end.sh  end2end_prover.sh  end2end_verifier.sh  prepare_solver.sh  readme.md  test.json
efc/src/: attestation.rs  beacon.rs  bls.rs  bls_verifier.rs  end2end.rs  hashtable.json  hashtable.rs  lib.rs  main.rs  merkle.rs  permutation.rs  shuffle.rs  shuffle2.rs  traits.rs  utils.rs  validator.rs  zkcuda_bls_verifier.rs  zkcuda_hashtable.rs  zkcuda_permutation.rs  zkcuda_shuffle.rs
efc/tests/: bls_verifier.rs  end2end.rs  hashtable.rs  permutation.rs  shuffle.rs  validator.rs
expander_compiler/: Cargo.toml  broadcast_info  circuit  commitment  commitments  commitments_extra_info  commitments_values  ecc_circuit  extra_info  input_partition  input_vals  is_broadcast  log.txt  pcs_setup  proof  witness
expander_compiler/ec_go_lib/: Cargo.toml
expander_compiler/ec_go_lib/src/: compile.rs  field_array.rs  lib.rs  proving.rs  witness_solver.rs
expander_compiler/macros/: Cargo.toml
expander_compiler/macros/src/: lib.rs
expander_compiler/src/: field.rs  lib.rs
expander_compiler/src/builder/: basic.rs  final_build.rs  final_build_opt.rs  hint_normalize.rs  mod.rs
expander_compiler/src/circuit/: config.rs  costs.rs  input_mapping.rs  mod.rs
expander_compiler/src/compile/: mod.rs  random_circuit_tests.rs  tests.rs
expander_compiler/src/field/: bn254.rs  gf2.rs  m31.rs  mod.rs
expander_compiler/src/frontend/: api.rs  builder.rs  circuit.rs  debug.rs  mod.rs  sub_circuit.rs  tests.rs  variable.rs  variable_with_context.rs  variables.rs  witness.rs
expander_compiler/src/hints/: builtin.rs  mod.rs  registry.rs
expander_compiler/src/layering/: compile.rs  input.rs  ir_split.rs  layer_layout.rs  mod.rs  tests.rs  wire.rs
expander_compiler/src/utils/: bucket_sort.rs  error.rs  function_id.rs  heap.rs  interpreter_loader.rs  misc.rs  mod.rs  pool.rs  serde.rs  static_hash_map.rs  union_find.rs
expander_compiler/src/zkcuda/: context.rs  context2.rs  cpu_monitor.rs  flatten_shaped.rs  kernel.rs  kernel2.rs  mod.rs  mpi_mem_share.rs  proof.rs  proving_system.rs  shape.rs  tests.rs  traits.rs  vec_shaped.rs
expander_compiler/tests/: adder.rs  cg_mpi_share.rs  circuit1.rs  custom_gate.rs  example.rs  example_call_expander.rs  example_fibonacci.rs  example_rsa.rs  expander_circuit.rs  expander_prover.rs  expander_verifier.rs  keccak_gf2.rs  keccak_gf2_full.rs  keccak_gf2_full_crosslayer.rs  keccak_gf2_vec.rs  keccak_m31_bn254.rs  keccak_non_gf2.rs  logup.rs  mod.rs  mul_fanout_limit.rs  multithreading_witness.rs  sha256_debug_utils.rs  sha256_gf2.rs  sha256_gf2_brentkung.rs  sha256_gf2_vanilla.rs  sha256_utils.rs  simple_add_m31.rs  sub_circuit_macro.rs  test_bn254_new_data.rs  to_binary_builtin.rs  to_binary_hint.rs  to_binary_unconstrained_api.rs  zkcuda_1.rs  zkcuda_examples.rs  zkcuda_examples2.rs  zkcuda_keccak.rs  zkcuda_matmul.rs  zkcuda_sha256.rs  zkcuda_transpose.rs
expander_compiler/tests/circuit/: example.rs  example_call_expander.rs  keccak_gf2.rs  keccak_gf2_full.rs  keccak_gf2_full_crosslayer.rs  keccak_gf2_vec.rs  mod.rs  multithreading_witness.rs  rsa_mul.py  simple_add_m31.rs  to_binary_hint.rs
expander_compiler/tests/zkcuda/: broadcast.rs  data_padding.rs  mod.rs  zkcuda_div.rs  zkcuda_examples.rs  zkcuda_keccak.rs  zkcuda_matmul.rs
rsa_circuit/: Cargo.toml
rsa_circuit/src/: constants.rs  lib.rs  main.rs  native.rs  tests.rs  u120.rs  u2048.rs  util.rs
rsa_circuit/src/tests/: conversion.rs  native.rs  rsa_field_mul_mod.rs  rsa_field_mul_no_mod.rs  u120.rs  u120_acc.rs  u120_add.rs  u120_comp.rs  u120_mul.rs  u2048_add.rs  u2048_comp.rs  u2048_mul.rs  u2048_mul_no_mod.rs  util.rs
(+363 files in other folders)
