[package]
name = "circuit-std-rs"
version = "0.1.0"
edition = "2021"


[dependencies]
expander_compiler = { path = "../expander_compiler"}

arith.workspace = true
ark-std.workspace = true
expander_config.workspace = true
expander_circuit.workspace = true
gf2.workspace = true
gkr.workspace = true
halo2curves.workspace = true
mersenne31.workspace = true
rand.workspace = true
sha2.workspace = true
big-int = "7.0.0"
num-bigint = "0.4.6"
num-traits = "0.2.19"
ark-bls12-381 = "0.5.0"
