[package]
name = "efc"
version = "0.1.0"
edition = "2021"


[dependencies]
expander_compiler = { path = "../expander_compiler"}
circuit-std-rs = { path = "../circuit-std-rs"}
hex = "0.4"
ark-std.workspace = true
rand.workspace = true
expander_config.workspace = true
expander_circuit.workspace = true
gkr.workspace = true
arith.workspace = true
gf2.workspace = true
mersenne31.workspace = true
ark-ec = "0.5.0"
ark-ff = "0.5.0"
ark-bls12-381 = "0.5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
stacker = "0.1.17"
base64 = "0.22.1"
rayon = "1.10.0"
clap.workspace = true
num-traits = "0.2.19"
num-bigint = "0.4.6"
sha2 = "0.10.8"
mpi_config.workspace = true
log = "0.4.26"
byteorder = "1.5.0"
gob = "0.1.0"
bincode = "1.3.3"
ark-serialize = "0.5.0"
env_logger = "0.11.7"
crossbeam-channel = "0.5.14"
