[package]
name = "efc"
version = "0.1.0"
edition = "2021"


[dependencies]
expander_compiler = { path = "../expander_compiler"}
circuit-std-rs = { path = "../circuit-std-rs"}

arith.workspace = true
ark-bls12-381.workspace = true
ark-ec.workspace = true
ark-ff.workspace = true
ark-std.workspace = true
base64.workspace = true
clap.workspace = true
expander_circuit.workspace = true
gf2.workspace = true
gkr.workspace = true
hex.workspace = true
mersenne31.workspace = true
num-bigint.workspace = true
num-traits.workspace = true
rand.workspace = true
rayon.workspace = true
serde.workspace = true
serde_json.workspace = true
serdes.workspace = true
sha2.workspace = true
stacker.workspace = true