[package]
name = "expander_compiler"
version = "0.1.0"
edition = "2021"


[dependencies]
arith.workspace = true
ark-std.workspace = true
babybear.workspace = true
chrono.workspace = true
clap.workspace = true
crosslayer_prototype.workspace = true
macros = { path = "./macros" }
ethnum.workspace = true
expander_circuit.workspace = true
expander_transcript.workspace = true
gf2.workspace = true
gkr.workspace = true
gkr_engine.workspace = true
gkr_hashers.workspace = true
goldilocks.workspace = true
halo2curves.workspace = true
mersenne31.workspace = true
rand.workspace = true
serdes.workspace = true
tiny-keccak.workspace = true

[dev-dependencies]
rayon = "1.9"
sha2 = "0.10.8"

[[bin]]
name = "trivial_circuit"
path = "bin/trivial_circuit.rs"
