[package]
name = "expander_compiler"
version = "0.1.0"
edition = "2021"


[dependencies]
stacker = "0.1.15"
arith.workspace = true
ark-std.workspace = true
axum.workspace = true
babybear.workspace = true
chrono.workspace = true
clap.workspace = true
crosslayer_prototype.workspace = true
macros = { path = "./macros" }
ethnum.workspace = true
expander_binary.workspace = true
expander_circuit.workspace = true
expander_transcript.workspace = true
expander_utils.workspace = true
gf2.workspace = true
gkr.workspace = true
gkr_engine.workspace = true
gkr_hashers.workspace = true
goldilocks.workspace = true
halo2curves.workspace = true
mersenne31.workspace = true
mpi.workspace = true
num_cpus.workspace = true
poly_commit.workspace = true
polynomials.workspace = true
rand.workspace = true
rayon.workspace = true
reqwest.workspace = true
serde.workspace = true
serdes.workspace = true
serde_json.workspace = true
sumcheck.workspace = true
shared_memory.workspace = true
tiny-keccak.workspace = true
tokio.workspace = true
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
stacker = "0.1.15"

[dev-dependencies]
rayon = "1.9"
sha2 = "0.10.8"

[features]
default = []
profile = ["expander_utils/profile"]

[[bin]]
name = "trivial_circuit"
path = "bin/trivial_circuit.rs"

[[bin]]
name = "expander_serve"
path = "bin/expander_serve.rs"

[[bin]]
name = "matmul_bench"
path = "bin/matmul_bench.rs"
