[package]
name = "ec_go_lib"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["dylib"]

[dependencies]
arith.workspace = true
expander_binary.workspace = true
expander_circuit.workspace = true
expander_transcript.workspace = true
gkr.workspace = true
gkr_engine.workspace = true
rand.workspace = true
serdes.workspace = true

expander_compiler = {path = "../" }

libc = "0.2.155"
